force-app/main/default/objects/b2ble_cpq_cnctr__Log_Event__e/fields/b2ble_cpq_cnctr__Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>