force-app/main/default/objects/b2ble_cpq_cnctr__Log_Event__e/fields/b2ble_cpq_cnctr__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>