force-app/main/default/objects/b2ble_cpq_cnctr__Log_Event__e/fields/b2ble_cpq_cnctr__Triggering_Event__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Triggering_Event__c</fullName>
    <label>Triggering Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>